# reason-console-formatter

./: .eslintrc.js  .gitignore  .releaserc  .releaserc.json  README.md  build.js  content-script-template.js  formatter.js  package.json  webpack.config.js
.circleci/: config.yml
_pocs/: caml_chrome_debugger.js  formatters.js  index.js  newFormatters.js
_pocs/test/js_of_ocaml/: dune  index.html  index.ml  package.json
e2e/: debug.js  index.spec.js
e2e/__fixtures__/: List.bs.js  NestedList.bs.js
extension/: devtool.js  manifest.json
scripts/: content-script-template.js  post-build.js
src/: devtool.js  flat.js  flat.spec.js  formatter.js  formatter.spec.js  index.js  index.spec.js  load.js  manifest.json
test/: index.html  test.js  types.html
test/BuckleScript/: README.md  bsconfig.json  index.html  package.json
test/BuckleScript/src/: Demo.bs.js  Demo.re
test/bs-demo/: .gitignore  .merlin  README.md  index.html  package.json
test/bs-demo/lib/bs/: .bsbuild  .bsdeps  .ninja_log  BsDemo.cmi  BsDemo.cmt  build.ninja
test/bs-demo/lib/bs/src/: Demo-BsDemo.cmi  Demo-BsDemo.cmj  Demo-BsDemo.cmt  Demo.mlast  Demo.mlast.d
test/bs-demo/src/: Demo.bs.js  Demo.re
