(executables
  (names index)
  (preprocess (pps js_of_ocaml-ppx ppx_deriving Ppx_deriving_runtime)))

(rule
  (targets index.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
         --source-map %{dep:index.bc} -o %{targets} --pretty)))

(alias
  (name default)
  (deps index.js index.html))
